# Agent-Warden

./: .gitignore  README.md  fs_backend.py  install-hooks.sh  pyproject.toml  requirements-dev.txt  setup-dev.sh  update-warden.sh  warden.py
agent_warden/: __init__.py  config.py  exceptions.py  formatting.py  hal.py  manager.py  package.py  project.py  utils.py
commands/example/: api-design.md  code-review.md  init-rules.md  refactor.md  test-gen.md
examples/: remote_ssh_example.md
hooks/: README.md  pre-commit  pre-push
rules/example/: coding-no-emoji.md  coding-no-emoji.mdc  coding-unit-tests.md  documentation.md  git-commit.md  git-commit.mdc
tests/: README.md  __init__.py  cleanup-test-env.sh  conftest.py  setup-test-env.sh  test_auto_update.py  test_backend.py  test_basic_commands.py  test_cli_main.py  test_cli_parsing.py  test_cli_remove_from_project.py  test_cli_rules.py  test_config.py  test_conflict_resolution.py  test_error_handling.py  test_fs_backend_errors.py  test_github_package.py  test_global_config.py  test_hal_converters.py  test_install_all.py  test_install_default_rules.py  test_manager_core.py  test_manager_init.py  test_multi_target.py  test_package_management.py  test_project_state.py  test_remote_config.py  test_remote_integration.py  test_remove_from_project.py  test_remove_project_confirmation.py  test_rename.py  test_status_diff.py  test_template_checksum.py  test_update_conflicts.py  test_utils_edge_cases.py  test_versioning.py
vhs-demo/: README.md  cleanup-demo.sh  demo.tape  record-demo.sh  setup-demo-env.sh
